libs/flake/text/KoSvgTextShape_p.h
@@ -295,7 +295,7 @@ public:
                    QPointF &totalAdvanceFTFontCoordinates) const;
 
     void clearAssociatedOutlines(const KoShape *rootShape);
-    void resolveTransforms(const KoShape *rootShape, int &currentIndex, bool isHorizontal, bool textInPath, QVector<KoSvgText::CharTransformation> &resolved, QVector<bool> collapsedChars);
+    void resolveTransforms(const KoShape *rootShape, QString text, QVector<CharacterResult> &result, int &currentIndex, bool isHorizontal, bool wrapped, bool textInPath, QVector<KoSvgText::CharTransformation> &resolved, QVector<bool> collapsedChars);
 
     void applyTextLength(const KoShape *rootShape, QVector<CharacterResult> &result, int &currentIndex, int &resolvedDescendentNodes, bool isHorizontal);
     static void applyAnchoring(QVector<CharacterResult> &result, bool isHorizontal);
